[package]
name = "fig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { git = "https://github.com/bincode-org/bincode" }
clap = { version = "3.2", features = ["derive"] }
colored = "2.0.0"
currency_rs = { git = "https://github.com/IsotoxalDev/currency_rs" }
dirs = "5.0.0"
rustyline = "11.0.0"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
