[package]
name = "fig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "3.2", features = ["derive"] }
colored = "2.0.0"
currency_rs = { git = "https://github.com/IsotoxalDev/currency_rs" }
rustyline = "11.0.0"
serde = { version = "1.0.160", features = ["derive"] }
serde-xml-rs = "0.6.0"
toml = "0.7.3"
